@@ -73,6 +73,9 @@ Frontend frequency. If '\-' is specified instead of a numeric value,
 the frontend will be not be tuned by dvblast and you should use external
 tuning tool (szap) to tune it.
 .TP
+\fB\-8\fR, \fB\-\-lnb\-type\fR universal\|old\-sky
+Choose LNB type. Default: 'universal' - Universal LNB ("Astra" LNB)
+.TP
 \fB\-F\fR, \fB\-\-fec\-inner\fR <FEC>
 Forward Error Correction used by satellite (FEC Inner)
 .br
